# reproducible_agent_environment

./: .gitignore  .lsp.json  CLAUDE.md  GEMINI.md  README.md
.agent_setup_instructions/: README.md  setup-checklist.md  troubleshooting.md  verify-installation.md
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/scripts/: approve-bd.sh
.devcontainer/: Dockerfile  devcontainer.json
commands/: bead-driven-development.md
conductor/: README.md  tech-stack.md
docs/: USAGE.md
guidelines/: python-standards.md  repo-structure.md
hooks/: hooks.json
hooks/scripts/: load-guidelines.sh
scripts/: bootstrap.sh  install-user.sh  sync.sh
skills/audit-repo/: SKILL.md
skills/bead-driven-development/: SKILL.md
skills/camera-model/: SKILL.md
skills/config-improvement/: SKILL.md
skills/consult-guidelines/: SKILL.md
skills/datajoint-biomechanics-schema/: SKILL.md
skills/deslop/: SKILL.md
skills/efficient-rendering/: SKILL.md
skills/enforce-guidelines/: SKILL.md
skills/excalidraw/: SKILL.md
skills/fetching-synchronized-data/: SKILL.md
skills/gait-lab-dataset/: SKILL.md
skills/gait-metrics/: SKILL.md
skills/github-activity-review/: SKILL.md
skills/golden-reference/: SKILL.md
skills/golden-test-harness/: SKILL.md
skills/investigation/: SKILL.md
skills/jax-config/: SKILL.md
skills/jax-jit-and-fusion/: SKILL.md
skills/jax-memory-and-retracing/: SKILL.md
skills/pose-datajoint/: SKILL.md
skills/scaffold-repo/: SKILL.md
sops/: pre-commit-checklist.sop.md
templates/: .gitignore  README.md  pyproject.toml
templates/devcontainer-cpu/: devcontainer.json
templates/devcontainer-gpu/: .env.template  devcontainer.json
(+13 files in other folders)
